Mon Apr  2 13:13:23 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Updated TODO.

	* Added channel key re-key support.  The re-key is perfomed
	  only by the router and is done once in an hour.  Added `rekey'
	  field to the SilcChannelEntry in the server.  Affected files
	  silcd/server.c and silcd/idlist.h.

	* Added silc_task_unregister_by_context into the file
	  lib/silcutil/silctask.[ch].

Sun Apr  1 19:49:34 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added SILC_UMODE_GONE mode to indicate when the client is not
	  present in the SILC network.  Added also support to the local
	  command AWAY that will set this mode.  Added support of showing
	  "xxx is gone" in WHOIS command.  The USERS command shows the
	  gone status as well.

	* Fixed setting server and router operator privileges in the
	  server's UMODE command.  Affected file silcd/command.c.

	* Merged the SKE KE1 and KE2 payloads into one payload.  The
	  new KE payload is equivalent to the old KE2 payload.

	  Cleaned up the SKE Start Payload parsing.  It now uses the
	  simple buffer unformatting to do the parsing.  A lot faster
	  now.

	  Added new Mutual Authentication flag (SILC_SKE_SP_FLAG_MUTUAL)
	  to the SKE that is used to indicate whether both of the SKE
	  parties should perform authentication.  By default only the
	  responder performs authentication.  By setting this flag also
	  the initiator must do authentication.  By default it is unset
	  since in normal SKE case, client to server connection, only
	  the responder should do authentication.  When doing SKE between
	  two clients both should perform authentication.  Updated the
	  code and the protocol specs.

	* A little fix to IDENTIFY command in the server.  Search the
	  client first by hash not nickname.  Affected file is 
	  silcd/command.c.

	* Fixed the silc_client_close_connection to support closing
	  the client to client connections wihtout deleting too much