@@ -1,3 +1,8 @@
+Mon Apr  2 20:02:33 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
+
+	* Moved the USERS printing from the library to the application.
+	  Affected files lib/silcclient/command.c and silc/client_ops.c.
+
 Mon Apr  2 13:13:23 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 
 	* Updated TODO.
